# OCTALUM-PYLAB

./: .gitignore  CODE_OF_CONDUCT.md  CONTRIBUTING.md  PROGRESS.md  README.md  SECURITY.md  mkdocs.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md  dependabot.yml
.github/ISSUE_TEMPLATE/: bug_report.md  bug_report.yml  feature_request.md  feature_request.yml  new_problem.yml  question.yml
.github/workflows/: ci.yml  docs.yml  pr.yml  release.yml
intake/: INSTALLATION.md  PREREQUISITES.md  README.md  ROADMAP.md
learn/cheatsheets/: big-o-cheatsheet.md  interview-checklist.md  patterns-cheatsheet.md  python-tips.md
learn/notebooks/: 01_sorting_visualization.ipynb  02_bst_visualization.ipynb  03_dp_visualization.ipynb  04_graph_traversal.ipynb  05_pattern_recognition.ipynb
record/docs/: SUMMARY.md  index.md
record/docs/algorithms/: dp.md  graphs.md  index.md  recursion.md  searching.md  sorting.md
record/docs/cheatsheets/: big-o.md  interview.md  patterns.md
record/docs/data-structures/: arrays-lists.md  graphs.md  hash-tables.md  index.md  linked-lists.md  stacks-queues.md  strings.md  trees.md
record/docs/foundations/: basics.md  control-flow.md  functions.md  index.md
record/docs/getting-started/: index.md  installation.md  prerequisites.md  roadmap.md
record/docs/patterns/: index.md
ship/.devcontainer/: devcontainer.json
ship/docker/: Dockerfile  docker-compose.yml
ship/scripts/: benchmark_sorting.py  daily_challenge.py  interview_simulator.py  run_tests.py  setup.py  sync_progress.py
verify/tests/: conftest.py
verify/tests/test_algorithms/: test_sorting_searching.py
verify/tests/test_data_structures/: test_lists.py
verify/tests/test_foundations/: test_basics.py
